@@ -1,3 +1,10 @@
+2002-08-30  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/gtkhex.c: fixed block marking.
+	made clipboard support work.
+	* src/ui.c: handlers for cut, copy and paste verbs.
+	* src/ghex-ui.xml: commands and menu items for cut/copy/paste.
+
 2002-08-28 Irene Ryan <irene.ryan@sun.com>
 
 	* help/C/ghex2.xml : updated to reflect changes to UI and to fix 
@@ -7,7 +14,7 @@
 	* help/C/l10n.txt : new file with screenshot instructions for L10N team
 	* help/C/figures/ghex_window_empty.png : new screenshot
 	* help/C/figures/ghex_window_opn.png : new screenshot
-	
+
 2002-08-19  Ross Burton  <ross@burtonini.com>
 
 	* ghex.desktop.in: Fix the desktop file so that it validates and
